# MulleObjC

./: .CC.mingw  .gitignore  .gitmodules  .ignore_headers  .touch  .travis.yml  CMakeDependencies.txt  CMakeLists.txt  CMakeSourcesAndHeaders.txt  LICENSE  MulleObjC.sublime-project  README.md  RELEASENOTES.md  TODO.md  build.sh  clib.json  package.json
.bootstrap/: MULLE_PRIVATE_REPOSITORIES  embedded_repositories  repositories
.github/workflows/: mulle-sde-ci.yml  semgrep.yml
.mulle-env/etc/: tool
.mulle-env/share/: environment-aux.sh  environment-extension.sh  environment-project.sh  environment-share.sh  environment.sh  tool
.mulle-make.mingw/set/: CC
.mulle-sde/share/: extension
.mulle-sourcetree/etc/: config
.travis.d/: before_install  before_install-aux.linux  script
MulleObjC.xcodeproj/: project.pbxproj
call-benchmark/: Makefile  bench.sh  main.m
cmake/: CreateLoaderIncObjC.cmake.nogit  DependenciesAndLibraries.cmake  DependenciesAndLibraries.cmake.orig  Headers.cmake  Headers.cmake.orig  HeadersAndSources.cmake  Sources.cmake.orig  _Dependencies.cmake  _Headers.cmake  _Libraries.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: AAMSupport.cmake  AAMSupportObjC.cmake  CompilerDetectionAuxC.cmake  CompilerFlagsAuxC.cmake  CompilerFlagsC.cmake  CompilerFlagsObjC.cmake  CreateLoaderIncObjC.cmake  DefineLoaderIncObjC.cmake  DependenciesIncObjC.cmake  Environment.cmake  Executable.cmake  ExecutableAux.cmake  ExecutableAuxC.cmake  ExecutableCAux.cmake  ExecutableObjC.cmake  FallbackEnvironment.cmake  Files.cmake  Framework.cmake  Library.cmake  LibraryAuxC.cmake  LibraryCAux.cmake  LibraryObjC.cmake  LinkManifestC.cmake  OptimizedLinkObjC.cmake  PROJECT_MAKE-config.cmake.in  PostExecutableCAux.cmake  PostFilesAuxC.cmake  PostFilesCAux.cmake  PostLibraryCAux.cmake  PostSharedLibrary.cmake  PostStandaloneAuxC.cmake  PreLibraryAuxC.cmake  PreLibraryCAux.cmake  Resources.cmake  Standalone.cmake  StandaloneC.cmake  StartupC.cmake  StartupCAux.cmake  StartupObjC.cmake
cola/: acknowledgements.md.bud  api.md.bud  description.md.bud  info.md.bud.future  properties.plist
dox/: AAM.md  AAO.md  API_MulleObjCExceptionHandler.md  API_NSRange.md  BUILD.md  HIERARCHY-OF-LANGUAGE-FEATURES.md  HOWTO-RELEASE.md  Makefile  MulleObjC-dependencies.dot  NAMING.md  RELEASEPLAN.md  instantiate.dot  migrate-to-mulle-objc.md  thread-and-pools.dot  thread-flow.dot  thread-setup.dot  threadlocal.dot  threads.md  universe-setup.dot
dox/releases/: 0.5.0.md
mulle-objc-root.xcodeproj/: project.pbxproj
mulle-project/: version-info.sh
protocol-benchmark/: Makefile  bench.sh  main.m  protocols.inc
src/: AUTORELEASE.md  MulleObjC-standalone.m  MulleObjC-startup.m  MulleObjC.h  MulleObjCAllocation.h  MulleObjCAllocation.m  MulleObjCCompiler.h  MulleObjCFunctions.h  MulleObjCFunctions.m  MulleObjCIntegralType.h  MulleObjCLoader.h  MulleObjCLoader.m  MulleObjCStandalone.m  MulleObjCStartup.m  MulleObjCUniverse.h  MulleObjCVersion.h  MulleStandaloneObjC.h  MulleStandaloneObjC.m  NSAutoreleasePool.h  NSAutoreleasePool.m  NSCoder.h  NSCoder.m  NSDebug.h  NSDebug.m  NSInvocation.h  NSInvocation.m  NSLock.h  NSLock.m  NSMethodSignature+Private.h  NSMethodSignature.h  NSMethodSignature.m  NSObject+KVCSupport.h  NSObject+KVCSupport.m  NSObject+NSCoding.h  NSObject+NSCoding.m  NSObject+NSCodingSupport.h  NSObject+NSCodingSupport.m  NSObject.h  NSObject.m  NSProxy.h  (+81 more)
src/class/: MulleDynamicObject.h  MulleDynamicObject.m  MulleObjCAutoreleasePool.h  MulleObjCLoader.h  MulleObjCLoader.m  MulleObjCLockFoundation.h  MulleObject-Private.h  MulleObject.h  MulleObject.m  MulleProxy.h  MulleProxy.m  NSAutoreleasePool.h  NSAutoreleasePool.m  NSCondition.h  NSCondition.m  NSConditionLock.h  NSConditionLock.m  NSInvocation.h  NSInvocation.m  NSLock-Private.h  NSLock.h  NSLock.m  NSMethodSignature-Private.h  NSMethodSignature.h  NSMethodSignature.m  NSNull.h  NSNull.m  NSObject+NSCodingSupport.m  NSObject.h  NSObject.m  NSProxy.h  NSProxy.m  NSRecursiveLock-Private.h  NSRecursiveLock.h  NSRecursiveLock.m  NSThread.h  NSThread.m
src/function/: MulleObjCAllocation.h  MulleObjCAllocation.m  MulleObjCDebug.h  MulleObjCDebug.m  MulleObjCExceptionHandler-Private.h  MulleObjCExceptionHandler.h  MulleObjCExceptionHandler.m  MulleObjCFunctions.h  MulleObjCFunctions.m  MulleObjCHashFunctions.h  MulleObjCIvar.h  MulleObjCIvar.m  MulleObjCPrinting.h  MulleObjCPrinting.m  MulleObjCProperty.h  MulleObjCProperty.m  MulleObjCStackFrame.h  MulleObjCStackFrame.m  NSByteOrder.h  NSDebug.h  NSDebug.m  mulle-sprintf-object.h  mulle-sprintf-object.m
src/generic/: import-private.h  import.h  include-private.h  include.h
src/protocol/: CLASSCLUSTER.md  MulleObjCClassCluster.h  MulleObjCClassCluster.m  MulleObjCException.h  MulleObjCException.m  MulleObjCProtocol.h  MulleObjCProtocol.m  MulleObjCRootObject.h  MulleObjCRootObject.m  MulleObjCRuntimeObject.h  MulleObjCSingleton.h  MulleObjCSingleton.m  MulleObjCTaggedPointer.h  MulleObjCTaggedPointer.m  NSCoding.h  NSCoding.m  NSContainer.h  NSCopying.h  NSCopying.m  NSCopyingWithAllocator.h  NSCopyingWithAllocator.m  NSEnumeration.h  NSFastEnumeration.h  NSLocking.h  NSMutableCopying.h  NSMutableCopying.m  NSObjectProtocol.h
src/protocols/: MulleObjCClassCluster.h  MulleObjCClassCluster.m  MulleObjCException.h  MulleObjCException.m  MulleObjCRuntimeObject.h  MulleObjCSingleton.h  NSCoding.h  (+9 more)
templates/: .travis.yml.scion  README.md.scion  _wrapper.yml.scion
test/: .gitignore  log  test.c  x  x.c  x.sh  y.sh
test-foundation/: main.m
test-meta-abi/: main.m
test-varargs/: main.m
test/PROTOCOLCLASS/macro/: CMakeLists.txt  Foo.h  Foo.m  main.m
test/craftinfo/glibc/: CMakeLists.txt
test/tao-mix/: CMakeLists.txt  README.md  default.errors  main.m  no-tao.m  tao.m
test/tao-thread/: CMakeLists.txt  README.md  default.errors  main.m
tests/: README.md  build-for-test.sh  build-test.sh  run-test.sh
tests/2_runtime/load-classes/: CMakeLists.txt  Makefile  Proto1.h  Proto2.h  ProtoClass1.h  create-test.sh
(+796 files in other folders)
